--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,17 +1,18 @@
 {
     "manifest_version": 2,
     "name": "Media key support for Pocket Casts",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "author": "Tobias Thyssen",
     "description": "Control Pocket Casts podcast webapp from anywhere!",
 
     "icons": {
-    	"128": "icons/keyboard-128.png"
+        "128": "icons/keyboard-128.png"
     },
 
     "permissions": [
         "tabs",
-        "https://play.pocketcasts.com/*"
+        "https://play.pocketcasts.com/*",
+        "https://playbeta.pocketcasts.com/*"
     ],
 
     "background": {
@@ -20,7 +21,10 @@
     },
 
     "content_scripts": [{
-        "matches": ["https://play.pocketcasts.com/*"],
+        "matches": [
+            "https://play.pocketcasts.com/*",
+            "https://playbeta.pocketcasts.com/*"
+        ],
         "js": ["commands.js"]
     }],
 
