--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 2,
-    "name": "Media key support for Pocket Casts",
-    "version": "1.1.1",
-    "author": "Tobias Thyssen",
+    "name": "Media key support for Pocket Casts (& Beta)",
+    "version": "1.1.2",
+    "author": "Richard Frost, Tobias Thyssen",
     "description": "Control Pocket Casts podcast webapp from anywhere!",
 
     "icons": {
